# zhiyan-legal

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Caddyfile  LICENSE  README.md  RESEARCH.md  SECURITY.md  SKILL.md  audit-governance-security.json  audit_prompt_engineering.json  audit_results.json  audit_test_and_data.json  courtroom_output.txt  devops_audit.json  manifest.py  mkdocs.yml  pyproject.toml  regulation_tracker.db  requirements.txt  run_arch_health_check.py  start.bat  start.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agents/: README.md
audit/: README.md  devops.json
backend/: .env.example  engine.py  main.py  requirements.txt
benchmark/: benchmark-7-contract-prompt.txt  contract-benchmark.json  contract-benchmark.md  essay-questions.json  essay-questions.md  real-contract-prompt.txt  retrieval-100.json  run_retrieval_eval.py
committee/: FEG_COMMITTEE.md  README.md  __init__.py  config.yaml  core.py  mapper.py  normalizer.py  quota.py  run.py  runner.py
committee_core/: __init__.py
data/: README.md  eval_queries.json  eval_schema.json
docker/: Dockerfile  README.md  api_server.py
docs/: architecture.md  banner.html  index.md  roadmap.md  vision.md  目錄索引_INDEX.md
frontend/: app.js  index.html  style.css
governance/: GOVERNANCE.md  INVARIANTS.md
knowledge/: README.md
law_monitor_app/: README.md  pubspec.yaml
pipelines/: README.md
prompts/: README.md
references/: ZHIYAN_PROMPT_ENGINEER-source.md  contract-template-sanitized.md
results/: architecture_health_check.json  committee_v1_baseline.json  db_health_check.json
scripts/: db_health_check.py  gcp-setup.sh  gemini_openai_debug.py  gen_nda_compact.py  gen_nda_docx.py  gen_nda_docx_standalone.py  gen_nda_final.py  gen_nda_pro.py  gen_nda_v2.py  get_secret.py  gh_poll.py  gh_poll2.py  github_auth.py  regulation_check.py  run_ablation_experiment.py  run_ablation_v2.py  run_arch_health_check.py  run_exp.sh  run_exp_logged.sh  setup.sh  start_api.sh  validate_dataset.py
skills/: README.md
templates/: 內部風險註記(自存勿交付).docx  民事書狀範本.docx  私人借款合約(無息30萬)範本.md  金錢消費借貸契約書(無息30萬).docx
tests/: .gitignore  ablation_config.json  ablation_queries.json  run_ablation_v8_committee.py  test_c54_validation.py  test_judicial_api.py  test_loader.py  test_manifest.py  test_routing.py  test_runner.py  test_sdk.py  test_sub_agent.py  (+1 more)
(+266 files in other folders)
